--- a/src/app/faq/faq.page.html
+++ b/src/app/faq/faq.page.html
@@ -12,4 +12,40 @@
 </h3>
 	<p>{{faq?.description}}</p>
 </div>
+<div  *ngIf="faqlist.length==0" class="skeletonclass">
+<div faqlist>
+<h3 subhead>
+ <ion-skeleton-text animated style="width: 100%;" ></ion-skeleton-text>
+</h3>
+	<p><ion-skeleton-text animated style="width: 100%" ></ion-skeleton-text></p>
+</div>
+<div faqlist>
+<h3 subhead>
+ <ion-skeleton-text animated style="width: 100%;" ></ion-skeleton-text>
+</h3>
+	<p><ion-skeleton-text animated style="width: 100%" ></ion-skeleton-text></p>
+</div><div faqlist>
+<h3 subhead>
+ <ion-skeleton-text animated style="width: 100%;" ></ion-skeleton-text>
+</h3>
+	<p><ion-skeleton-text animated style="width: 100%" ></ion-skeleton-text></p>
+</div><div faqlist>
+<h3 subhead>
+ <ion-skeleton-text animated style="width: 100%" ></ion-skeleton-text>
+</h3>
+	<p><ion-skeleton-text animated style="width: 100%" ></ion-skeleton-text></p>
+</div><div faqlist>
+<h3 subhead>
+ <ion-skeleton-text animated style="width: 100%" ></ion-skeleton-text>
+</h3>
+	<p><ion-skeleton-text animated style="width: 100%" ></ion-skeleton-text></p>
+</div><div faqlist>
+<h3 subhead>
+ <ion-skeleton-text animated style="width: 100%" ></ion-skeleton-text>
+</h3>
+	<p><ion-skeleton-text animated style="width: 100%" ></ion-skeleton-text></p>
+</div>
+</div>
+
+
 </ion-content>
