--- a/src/app/settings/settings.page.html
+++ b/src/app/settings/settings.page.html
@@ -148,6 +148,13 @@ My Profile
 	  <ion-icon name="chevron-forward"></ion-icon>
 	  </ion-buttons>
 	   </ion-item>
+	    <ion-item detail="false" lines="none" routerLink="/changepassword">
+	  <ion-icon iconleft name="help-circle-outline" slot="start"></ion-icon>
+      <ion-label>Change Password</ion-label>
+	  <ion-buttons slot="end">
+	  <ion-icon name="chevron-forward"></ion-icon>
+	  </ion-buttons>
+	   </ion-item>
 	   <ion-item detail="false" lines="none" routerLink="/contactus">
 	  <ion-icon iconleft name="call-outline" slot="start"></ion-icon>
       <ion-label>Contact Us</ion-label>
